2 added link to discord

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Contact information</h1>
+    <a href="https://discord.gg/100devs">#100Devs Discord</a>
     <ul></ul>
 
 </body>
